--- a/src/components/componentsCss/navbar.css
+++ b/src/components/componentsCss/navbar.css
@@ -44,6 +44,7 @@
 
 .top li {
   text-align: left;
+  list-style-type: none;
   margin: 0.5rem 0;
   padding: 10px 0;
   border-top-right-radius: 3px;
