--- a/src/components/componentsCss/navbar.css
+++ b/src/components/componentsCss/navbar.css
@@ -14,8 +14,6 @@
 
 #navbar {
   width: 50%;
-  height: 100vh;
-  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -24,6 +22,9 @@
   padding: 1rem 0;
   padding-left: 1rem;
   transition: 0.5s;
+  /* position: fixed; */
+  /* margin-left: -50%; */
+  display: none;
   top: 0;
   z-index: 99;
 }
@@ -106,8 +107,7 @@
 @media (min-width: 768px) {
   #navbar {
     width: 23%;
-    position: fixed;
-    left: 0;
+    display: unset;
     padding: 2rem 0;
     padding-left: 2rem;
     box-shadow: 0 0 10px 0 rgb(200, 200, 200);
