--- a/src/components/componentsCss/navbar.css
+++ b/src/components/componentsCss/navbar.css
@@ -47,9 +47,9 @@
   text-align: left;
   list-style-type: none;
   margin: 0.5rem 0;
-  padding: 10px 0;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+  padding: 10px 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
   transition: 0.3s linear;
 }
 
