--- a/src/components/componentsCss/navbar.css
+++ b/src/components/componentsCss/navbar.css
@@ -14,7 +14,8 @@
 
 #navbar {
   width: 50%;
-  display: flex;
+
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-between;
   background-color: rgba(186, 183, 183, 0);
@@ -22,7 +23,9 @@
   padding: 1rem 0;
   padding-left: 1rem;
   transition: 0.5s;
+
   /* position: fixed; */
+
   /* margin-left: -50%; */
   display: none;
   top: 0;
