--- a/src/components/componentsCss/navbar.css
+++ b/src/components/componentsCss/navbar.css
@@ -1,17 +1,3 @@
-/* .bars {
-  position: fixed;
-  width: 100%;
-  background-color: rgba(186, 183, 183, 0.177);
-  backdrop-filter: blur(25px);
-  padding: 1rem;
-  z-index: 9;
-}
-
-.bars i,
-.cancel i {
-  font-size: 2rem;
-} */
-
 #navbar {
   width: 50%;
 
@@ -70,12 +56,12 @@
 }
 
 .top li:active {
-  background-color: greenyellow;
+  background-color:var(--green);
   padding: 10px;
 }
 
 .top li:hover {
-  background-color: greenyellow;
+  background-color: var(--green);
   padding: 10px;
 }
 
@@ -126,13 +112,13 @@
   }
 
   .top li:active {
-    background-color: greenyellow;
+    background-color:var(--green);
 
     /* padding:1.2rem 2.5rem; */
   }
 
   .top li:hover {
-    background-color: greenyellow;
+    background-color: var(--green);
 
     /* padding: 1.2rem 2.5rem; */
   }
