Add reservation page styling

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ button:focus-visible {
     background-color: #fff;
 
     --darkgreen: #799b08;
-    --green: #8bb406;
+    --green: #97bf0f;
   }
 
   a:hover {
