--- a/src/components/componentsCss/houses.css
+++ b/src/components/componentsCss/houses.css
@@ -1,5 +1,10 @@
 .houses {
   position: relative;
+  height: 100%;
+}
+
+.all {
+  height: calc(100% - 10rem);
 }
 
 .image {
@@ -9,7 +14,7 @@
 }
 
 .image img {
-  width: 80%;
+  width: 60%;
   height: 100%;
 }
 
@@ -33,7 +38,6 @@
 
 .each {
   padding: 20px 10px;
-  box-shadow: 0 0 5px 0 gray;
   margin: 10px 0;
 }
 
@@ -82,6 +86,7 @@
   border-bottom-right-radius: 50%;
   position: absolute;
   left: 0;
+  bottom: 3rem;
 }
 
 .houses .next {
@@ -89,6 +94,7 @@
   border-bottom-left-radius: 50%;
   position: absolute;
   right: 0;
+  bottom: 3rem;
 }
 
 .header p {
