--- a/src/components/componentsCss/reservation.css
+++ b/src/components/componentsCss/reservation.css
@@ -1,6 +1,6 @@
 .res-container {
   position: relative;
-  background-image: url('../src/assets/reserveback.jpeg');
+  background-image: url('https://images.pexels.com/photos/1029599/pexels-photo-1029599.jpeg');
   background-size: cover;
   width: 100%;
   height: 100%;
