--- a/src/routes/styles/auth.module.css
+++ b/src/routes/styles/auth.module.css
@@ -5,7 +5,7 @@
 }
 
 .form-container {
-  height: calc(100vh - 50px);
+  height: calc(100vh - 4rem);
 }
 
 .sign-btn {
@@ -13,4 +13,15 @@
   justify-content: space-between;
   gap: 1rem;
   border-radius: 2rem;
+}
+
+.sign-btn a {
+  text-decoration: none;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%; 
 }
