Add styled to disabled button

--- a/src/components/componentsCss/reservation.css
+++ b/src/components/componentsCss/reservation.css
@@ -46,3 +46,8 @@ input {
 .select {
   flex-direction: column;
 }
+
+.reserve-button:disabled {
+ background-color: var(--green);
+ color: white ;
+}
