--- a/src/components/componentsCss/delete.css
+++ b/src/components/componentsCss/delete.css
@@ -1,9 +1,10 @@
 .house-div {
   flex-direction: column;
   align-items: center;
+  line-height: 1rem;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
   .delete-image {
     height: 50%;
     width: 50%;
